--- a/style.css
+++ b/style.css
@@ -258,11 +258,14 @@ footer {
 .bio-section-title {
     font-size: 1.4rem;
     font-weight: 700;
-    text-align: center;
+    text-align: left;
     margin-top: 24px;
     margin-bottom: 16px;
     letter-spacing: 1px;
     color: #222;
+    max-width: 900px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 @media (max-width: 900px) {
