--- a/style.css
+++ b/style.css
@@ -191,7 +191,7 @@ nav a.active, nav a:hover {
     border-radius: 20px;
 }
 
-.institution {
+.institution, .board {
     font-size: 1.1rem;
     font-weight: 600;
     color: #444;
